kubernetes/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  labels:
    app: mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mysql-db
  strategy: {}
  template:
    metadata:
      annotations:
      labels:
        name: mysql-db
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: springboot_mysql_example
        - name: MYSQL_ROOT_PASSWORD
          value: root123
        image: mysql:5.7
        imagePullPolicy: ""
        name: mysql-db
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
