kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    name: myapp
status:
  loadBalancer: {}
