kubernetes/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  labels:
    app: mysql-db
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    name: mysql-db
status:
  loadBalancer: {}
